--- a/server/.env.example
+++ b/server/.env.example
@@ -1,2 +1,6 @@
 PORT=3000
 DATABASE_URL="mysql://johndoe:randompassword@localhost:3306/mydb"
+AWS_REGION=ap-southeast-2
+AWS_S3_BUCKET=uacttrack
+AWS_ACCESS_KEY_ID=AKIA6H44OURS5WU44NWY-1
+AWS_SECRET_ACCESS_KEY=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-1
