--- a/server/package.json
+++ b/server/package.json
@@ -13,17 +13,23 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.911.0",
+        "@aws-sdk/s3-request-presigner": "^3.911.0",
         "@prisma/client": "^6.17.1",
         "bcryptjs": "^3.0.2",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "express": "^5.1.0",
-        "jsonwebtoken": "^9.0.2"
+        "jsonwebtoken": "^9.0.2",
+        "multer": "^2.0.2",
+        "multer-s3": "^3.0.1"
     },
     "devDependencies": {
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.3",
         "@types/jsonwebtoken": "^9.0.10",
+        "@types/multer": "^2.0.0",
+        "@types/multer-s3": "^3.0.3",
         "@types/node": "^24.7.2",
         "nodemon": "^3.1.10",
         "prisma": "^6.17.1",
