--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,9 @@
     "author": "",
     "license": "ISC",
     "description": "",
+    "prisma": {
+        "seed": "ts-node prisma/seed.ts"
+    },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.911.0",
         "@aws-sdk/s3-request-presigner": "^3.911.0",
