--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
         "@aws-sdk/s3-request-presigner": "^3.911.0",
         "@prisma/client": "^6.17.1",
         "bcryptjs": "^3.0.2",
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "express": "^5.1.0",
@@ -28,6 +29,7 @@
         "multer-s3": "^3.0.1"
     },
     "devDependencies": {
+        "@types/cookie-parser": "^1.4.10",
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.3",
         "@types/jsonwebtoken": "^9.0.10",
