--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
+        "seed": "ts-node src/seeders/seed.ts",
         "dev": "nodemon",
         "build": "tsc",
         "start": "node dist/index.js",
@@ -18,13 +19,13 @@
     "dependencies": {
         "@aws-sdk/client-s3": "^3.911.0",
         "@aws-sdk/s3-request-presigner": "^3.911.0",
-        "@prisma/client": "^6.17.1",
         "bcryptjs": "^3.0.2",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "express": "^5.1.0",
         "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.19.3",
         "multer": "^2.0.2",
         "multer-s3": "^3.0.1"
     },
@@ -37,7 +38,6 @@
         "@types/multer-s3": "^3.0.3",
         "@types/node": "^24.7.2",
         "nodemon": "^3.1.10",
-        "prisma": "^6.17.1",
         "ts-node": "^10.9.2",
         "typescript": "^5.9.3"
     }
