--- a/server/package.json
+++ b/server/package.json
@@ -30,10 +30,13 @@
         "multer-s3": "^3.0.1"
     },
     "devDependencies": {
+        "@types/bcryptjs": "^2.4.6",
         "@types/cookie-parser": "^1.4.10",
         "@types/cors": "^2.8.19",
-        "@types/express": "^5.0.3",
+        "@types/dotenv": "^6.1.1",
+        "@types/express": "^5.0.5",
         "@types/jsonwebtoken": "^9.0.10",
+        "@types/mongoose": "^5.11.96",
         "@types/multer": "^2.0.0",
         "@types/multer-s3": "^3.0.3",
         "@types/node": "^24.7.2",
