--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -9,7 +9,7 @@
         // See also https://aka.ms/tsconfig/module
         "module": "commonjs", // "nodenext"
         "target": "es2016", // "esnext"
-        "types": [],
+        "types": ["node"],
         // For nodejs:
         // "lib": ["esnext"],
         // "types": ["node"],
