trying to fix error about node

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -40,7 +40,10 @@
         "noUncheckedSideEffectImports": true,
         "moduleDetection": "force",
         "skipLibCheck": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+
+        "moduleResolution": "node",
+        "allowSyntheticDefaultImports": true
     },
     "include": ["src/**/*.ts"],
     "exclude": ["node_modules"]
